FIXED scraper css to let scraped images overflow with object-fit: cover;

--- a/CSS/scraperstyle.css
+++ b/CSS/scraperstyle.css
@@ -2,6 +2,7 @@ body {
 	font-family: Helvetica;
 }
 
+
 }
 .results {
 	width: 100%;
@@ -24,8 +25,13 @@ padding-top: 30px;
 }
 
 .scraperimage{
+	object-fit: cover;
+	-o-object-fit: cover;
 	border-radius: 1%;
-	max-width: 190px !important; 
+	width:auto !important;
+	height:auto !important;
+	max-height: 190px !important; 
+	min-height: 190px !important;
 	min-width: 190px !important;
 }
 
@@ -36,6 +42,8 @@ padding-top: 30px;
 	max-height: 400px !important;
 }
 
+
+
 div#oaklandevents div.col-md-7 {
 	width: 100%;
 }
@@ -44,4 +52,38 @@ div#archive div.col-md-7 {
 	width: 100%;
 }
 
+@media (max-width: 474px){
 
+.scraperimage{
+	max-width: 160px !important; 
+	min-width: 160px !important;
+	max-height: 160px !important; 
+	min-height: 160px !important;
+}
+
+.thumbnail {
+	min-width: 180px !important;
+	max-width: 180px !important;
+	min-height: 300px !important;
+	max-height: 300px !important;
+}
+}
+
+@media (max-width: 447px){
+
+.scraperimage{
+	max-width: 110px !important; 
+	min-width: 110px !important;
+	max-height: 110px !important; 
+	min-height: 110px !important;
+}
+
+.thumbnail {
+	min-width: 120px !important;
+	max-width: 120px !important;
+	min-height: 250px !important;
+	max-height: 250px !important;
+}
+}
+
+/* 325.556px
